--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -2,10 +2,27 @@
   display: grid;
   grid-template-columns: 3.5fr 1.5fr;
 }
+.course-section {
+  margin: 30px 0 0 100px;
+}
+.title {
+  color: rgb(51, 51, 245);
+}
 
 .courses {
   background-color: rgb(246, 253, 251);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .courses {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+  }
+  .course-section {
+    margin: 5px;
+  }
 }
