--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -30,3 +30,10 @@
   align-items: center;
   background-color: rgb(194, 204, 204);
 }
+.activity {
+  width: 100%;
+  color: white;
+  background-color: rgb(52, 162, 206);
+  border: 0;
+  margin-top: 50px;
+}
